--- a/css/custom.css
+++ b/css/custom.css
@@ -9,9 +9,12 @@ body {
 }
 .text-muted {
   color: #777777;
-}
+}/*
 .text-primary {
   color: #fed136;
+}*/
+.text-primary {
+  color: #e7ad46;
 }
 p {
   font-size: 14px;
@@ -109,14 +112,8 @@ fieldset[disabled] .btn-primary.active {
   border-radius: 3px;
   font-size: 18px;
   padding: 15px 30px;
-  margin-left: 55px;
 }
-@media (min-width: 768px) {
-  .btn-xl {    
-  margin-left: 85px;
-  margin-top: 10px;
-  }
-}
+
 .btn-xl:hover,
 .btn-xl:focus,
 .btn-xl:active,
@@ -228,7 +225,7 @@ fieldset[disabled] .btn-xl.active {
   }
   .navbar-custom .navbar-nav > .active > a {
     border-radius: 3px;
-  }
+  }  
 }
 @media (min-width: 768px) {
   .navbar-custom.affix {
@@ -248,7 +245,6 @@ header {
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
-  /*text-align: center;*/
   color: white;
 }
 header .intro-text {
@@ -257,29 +253,50 @@ header .intro-text {
 }
 header .intro-text .intro-lead-in,
 header .intro-text .intro-lead-out {
+  display: inline-block;
   font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #0C0C0D;
-  font-size: 22px;
-  line-height: 22px;
+  font-size: 30px;
   /*margin-bottom: 25px;*/
   text-transform: uppercase;
   font-weight: bold;
-  text-align:left;
+  text-align:left;  
+  padding: 0 12px;
 }
 header .intro-text .intro-lead-in {
   background: #D5D5D4;
+  letter-spacing: -2px;
+  font-size: 32px;
 }
 header .intro-text .intro-lead-out {
-  background: #C3C0BD;
+  background: #C3C0BD;  
+  letter-spacing: 2px;
+  width: 100%;
 }
 header .intro-text .intro-heading {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
   font-size: 30px;
-  line-height: 50px;
-  margin-bottom: 25px;
+  margin-bottom: 15px;
+  padding: 0 16px;
   background: #B73030;
+}
+header .intro-text p {
+  font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  text-align: left;
+  letter-spacing: 0;    
+  word-spacing: 1px;
+}
+header .intro-block-out {
+  width: 90%;
+  min-width: 270px;
+  margin:0 20px;
+  overflow: hidden;
+}
+header .intro-block-in {
+    width: 70%;
 }
 @media (min-width: 768px) {
   header .intro-text {
@@ -287,30 +304,55 @@ header .intro-text .intro-heading {
     padding-bottom: 200px;
   }
   header .intro-text .intro-lead-in,
-  header .intro-text .intro-lead-out  {
-    font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;    
+  header .intro-text .intro-lead-out  {        
+    font-size: 40px;
+    line-height: 45px;   
+    padding: 5px 15px;
+  }
+  header .intro-text .intro-heading {    
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 55px;
+    padding: 0 30px;
+  }  
+  header .intro-block-out {
+    margin:0 20px;
+  }
+  
+}
+@media (min-width: 992px) {
+  header .intro-text {
+    padding-top: 300px;
+    padding-bottom: 200px;
+  }
+  header .intro-text .intro-lead-in,
+  header .intro-text .intro-lead-out  {  
     font-size: 50px;
     line-height: 55px;
     /*margin-bottom: 25px;*/
-    padding: 0 10px;
+    padding: 5px 15px;
   }
   header .intro-text .intro-heading {
-    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-transform: uppercase;
     font-weight: 700;
     font-size: 40px;
     line-height: 55px;
     /*margin-bottom: 50px;*/
-    text-align: right;
-    padding: 0 30px;
+    padding: 0 10px;
   }
   header .intro-text p {
     font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 16px;
     text-align: left;
-    padding-left: 90px;
     letter-spacing: 0;    
     word-spacing: 1px;
+  }
+  header .intro-block-out {
+    margin:0 20px;
+  }
+  header .intro-block-in {
+    width: 70%;
   }
 }
 section {
@@ -334,9 +376,30 @@ section h3.section-subheading {
     padding: 150px 0;
   }
 }
-.service-heading {
+#statistics {
+  padding-top: 30px !important;
+  padding-bottom: 30px !important;
+  background: #1A1A1A;
+  color: #fff;
+}
+.statistic-heading {
   margin: 15px 0;
-  text-transform: none;
+  text-transform: uppercase;
+}
+.circle-stat {
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+  border: 4px solid #e7ae47;
+  -webkit-border-radius: 100%;
+          border-radius: 100%;
+}
+span.circle-stat em {
+  display: inline-block; 
+  font-size: 45px; 
+  line-height: 95px;
+  font-style: normal;
+  font-weight: bold;
 }
 #portfolio .portfolio-item {
   margin: 0 0 15px;
