--- a/css/custom.css
+++ b/css/custom.css
@@ -1,11 +1,10 @@
-/*!
- * Start Bootstrap - Agency v3.3.7+1 (http://startbootstrap.com/template-overviews/agency)
- * Copyright 2013-2016 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
- */
+@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700');
+@import url('https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700');
+
 body {
-  overflow-x: hidden;
-  font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    overflow-x: hidden;
+    font-family: 'Open Sans Condensed', sans-serif;
 }
 .text-muted {
   color: #777777;
@@ -18,7 +17,7 @@ body {
 }
 p {
   font-size: 14px;
-  line-height: 1.75;
+  line-height: 1.5;
 }
 p.large {
   font-size: 16px;
@@ -45,9 +44,9 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  text-transform: uppercase;
-  font-weight: 700;
+    font-family: 'Open Sans Condensed', sans-serif;
+    text-transform: uppercase;
+    font-weight: 700;
 }
 .img-centered {
   margin: 0 auto;
@@ -60,9 +59,8 @@ h6 {
 }
 .btn-primary {
   color: white;
-  background-color: #fed136;
-  border-color: #fed136;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background-color: #B73030;
+  border-color: #B73030;
   text-transform: uppercase;
   font-weight: 700;
 }
@@ -102,53 +100,6 @@ fieldset[disabled] .btn-primary.active {
   color: #fed136;
   background-color: white;
 }
-.btn-xl {
-  color: white;
-  background-color: #B73030;
-  border-color: #B73030;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  text-transform: uppercase;
-  font-weight: 700;
-  border-radius: 3px;
-  font-size: 18px;
-  padding: 15px 30px;
-}
-
-.btn-xl:hover,
-.btn-xl:focus,
-.btn-xl:active,
-.btn-xl.active,
-.open .dropdown-toggle.btn-xl {
-  color: white;
-  border-color: #B73030;
-}
-.btn-xl:active,
-.btn-xl.active,
-.open .dropdown-toggle.btn-xl {
-  background-image: none;
-}
-.btn-xl.disabled,
-.btn-xl[disabled],
-fieldset[disabled] .btn-xl,
-.btn-xl.disabled:hover,
-.btn-xl[disabled]:hover,
-fieldset[disabled] .btn-xl:hover,
-.btn-xl.disabled:focus,
-.btn-xl[disabled]:focus,
-fieldset[disabled] .btn-xl:focus,
-.btn-xl.disabled:active,
-.btn-xl[disabled]:active,
-fieldset[disabled] .btn-xl:active,
-.btn-xl.disabled.active,
-.btn-xl[disabled].active,
-fieldset[disabled] .btn-xl.active {
-  background-color: #fed136;
-  border-color: #fed136;
-}
-.btn-xl .badge {
-  color: #fed136;
-  background-color: white;
-}
 .navbar-custom {
   background-color: #222222;
   border-color: transparent;
@@ -160,7 +111,7 @@ fieldset[disabled] .btn-xl.active {
 .navbar-custom .navbar-brand:focus,
 .navbar-custom .navbar-brand:active,
 .navbar-custom .navbar-brand.active {
-  color: #fec503;
+  color: #e7ae47;
 }
 .navbar-custom .navbar-collapse {
   border-color: rgba(255, 255, 255, 0.02);
@@ -168,7 +119,6 @@ fieldset[disabled] .btn-xl.active {
 .navbar-custom .navbar-toggle {
   background-color: #fed136;
   border-color: #fed136;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   color: white;
   font-size: 12px;
@@ -177,21 +127,21 @@ fieldset[disabled] .btn-xl.active {
 .navbar-custom .navbar-toggle:focus {
   background-color: #fed136;
 }
-.navbar-custom .nav li a,
-.navbar-custom .nav li p {
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+.navbar-custom .nav li a {
   text-transform: uppercase;
   font-weight: 400;
+  font-size: 18px;
   letter-spacing: 1px;
   color: white;
 }
-.navbar-custom .nav li p {
+#header-phone{
   display: inline-block;
   font-size: 20px;
   color: #EFBC4D;
-  padding-top: 8px;
-  padding-left: 30px;
-  text-shadow: 0px 5px 8px rgba(0,0,0,0.9);
+  font-weight: 700;
+  padding-left:50px;
+  padding-right: 0;
+  text-shadow: 1px 5px 8px rgba(0,0,0,0.9);
 }
 .navbar-custom .nav li a:hover,
 .navbar-custom .nav li a:focus {
@@ -201,14 +151,33 @@ fieldset[disabled] .btn-xl.active {
 .navbar-custom .navbar-nav > .active > a {
   border-radius: 0;
   color: white;
-  background-color: #fed136;
+  background-color: #e7ae47;
 }
 .navbar-custom .navbar-nav > .active > a:hover,
 .navbar-custom .navbar-nav > .active > a:focus {
   color: white;
   background-color: #fec503;
 }
+.navbar .navbar-nav {
+  display: inline-block;
+  float: none;
+  vertical-align: top;
+}
+
+.navbar .navbar-collapse {
+  text-align: center;
+}
 @media (min-width: 768px) {
+  .navbar .navbar-nav {
+      display: inline-block;
+      float: none;
+      vertical-align: top;
+  }
+
+  .navbar .navbar-collapse {
+      text-align: center;
+  }
+    
   .navbar-custom {
     background-color: transparent;
     padding: 25px 0;
@@ -217,17 +186,9 @@ fieldset[disabled] .btn-xl.active {
     transition: padding 0.3s;
     border: none;
   }
-  .navbar-custom .navbar-brand {
-    font-size: 1.6em;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    transition: all 0.3s;
-  }
-  .navbar-custom .navbar-nav > .active > a {
+.navbar-custom .navbar-nav > .active > a {
     border-radius: 3px;
-  }  
-}
-@media (min-width: 768px) {
+  } 
   .navbar-custom.affix {
     background-color: #222222;
     padding: 10px 0;
@@ -235,6 +196,16 @@ fieldset[disabled] .btn-xl.active {
   .navbar-custom.affix .navbar-brand {
     font-size: 1.5em;
   }
+}
+@media (max-width: 768px){
+    #header-phone {
+        display: none;
+    }
+}
+.navbar-custom .navbar-brand {
+    background-image: url('../img/logo.png');
+    width: 216px;
+    height: 59px;
 }
 header {
   background-image: url('../img/header_bg.jpg');
@@ -247,12 +218,11 @@ header {
   -o-background-size: cover;
   color: white;
 }
-header .intro-text {
-  padding-top: 100px;
-  padding-bottom: 50px;
+.intro-text {
+  padding: 100px 0;
 }
-header .intro-text .intro-lead-in,
-header .intro-text .intro-lead-out {
+.intro-text .intro-lead-in,
+.intro-text .intro-lead-out {
   display: inline-block;
   font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #0C0C0D;
@@ -263,40 +233,54 @@ header .intro-text .intro-lead-out {
   text-align:left;  
   padding: 0 12px;
 }
-header .intro-text .intro-lead-in {
+.intro-text .intro-lead-in {
   background: #D5D5D4;
   letter-spacing: -2px;
   font-size: 32px;
 }
-header .intro-text .intro-lead-out {
+.intro-text .intro-lead-out {
   background: #C3C0BD;  
   letter-spacing: 2px;
-  width: 100%;
 }
-header .intro-text .intro-heading {
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+.intro-text .intro-heading {
   text-transform: uppercase;
   font-weight: 700;
   font-size: 30px;
   margin-bottom: 15px;
   padding: 0 16px;
   background: #B73030;
+  color: #fff;
 }
-header .intro-text p {
+.intro-text p {
   font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   text-align: left;
   letter-spacing: 0;    
   word-spacing: 1px;
 }
-header .intro-block-out {
+.intro-block-out {
   width: 90%;
   min-width: 270px;
   margin:0 20px;
   overflow: hidden;
 }
-header .intro-block-in {
-    width: 70%;
+.intro-block-in {
+  width: 70%;
+}
+.intro-block-2{
+    margin: 200px 0;
+    background-image: url('../img/wiget.png');
+    width: 250px;
+    height: 357px;
+    text-align: center;
+    padding: 20px;
+    text-transform:uppercase;
+}
+.intro-block-2 p{
+    font-size: 24px;
+    color: #B73030;
+    font-weight:700;
+    text-align: center;
 }
 @media (min-width: 768px) {
   header .intro-text {
@@ -323,7 +307,7 @@ header .intro-block-in {
 }
 @media (min-width: 992px) {
   header .intro-text {
-    padding-top: 300px;
+    padding-top: 200px;
     padding-bottom: 200px;
   }
   header .intro-text .intro-lead-in,
@@ -386,6 +370,25 @@ section h3.section-subheading {
   margin: 15px 0;
   text-transform: uppercase;
 }
+
+.circle-header {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  border: 4px solid #B73030;
+  -webkit-border-radius: 100%;
+          border-radius: 100%;
+}
+span.circle-header em {
+  color: #B73030;
+  display: inline-block; 
+  font-size: 40px; 
+  line-height: 40px;
+  font-style: normal;
+  font-weight: bold;
+}
+
 .circle-stat {
   display: inline-block;
   width: 100px;
@@ -396,75 +399,13 @@ section h3.section-subheading {
 }
 span.circle-stat em {
   display: inline-block; 
-  font-size: 45px; 
-  line-height: 95px;
+  font-size: 40px; 
+  line-height: 90px;
   font-style: normal;
   font-weight: bold;
 }
-#portfolio .portfolio-item {
-  margin: 0 0 15px;
-  right: 0;
-}
-#portfolio .portfolio-item .portfolio-link {
-  display: block;
-  position: relative;
-  max-width: 400px;
-  margin: 0 auto;
-}
-#portfolio .portfolio-item .portfolio-link .portfolio-hover {
-  background: rgba(254, 209, 54, 0.9);
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  transition: all ease 0.5s;
-  -webkit-transition: all ease 0.5s;
-  -moz-transition: all ease 0.5s;
-}
-#portfolio .portfolio-item .portfolio-link .portfolio-hover:hover {
-  opacity: 1;
-}
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
-  position: absolute;
-  width: 100%;
-  height: 20px;
-  font-size: 20px;
-  text-align: center;
-  top: 50%;
-  margin-top: -12px;
-  color: white;
-}
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content i {
-  margin-top: -12px;
-}
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h3,
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h4 {
-  margin: 0;
-}
-#portfolio .portfolio-item .portfolio-caption {
-  max-width: 400px;
-  margin: 0 auto;
-  background-color: white;
-  text-align: center;
-  padding: 25px;
-}
-#portfolio .portfolio-item .portfolio-caption h4 {
-  text-transform: none;
-  margin: 0;
-}
-#portfolio .portfolio-item .portfolio-caption p {
-  font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-style: italic;
-  font-size: 16px;
-  margin: 0;
-}
-#portfolio * {
-  z-index: 2;
-}
-@media (min-width: 767px) {
-  #portfolio .portfolio-item {
-    margin: 0 0 30px;
-  }
+#prikol{
+    background-image: url('../img/block1.jpg');
 }
 .timeline {
   list-style: none;
@@ -679,27 +620,23 @@ section#contact .form-control:focus {
   box-shadow: none;
 }
 section#contact ::-webkit-input-placeholder {
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
   color: #eeeeee;
 }
 section#contact :-moz-placeholder {
   /* Firefox 18- */
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
   color: #eeeeee;
 }
 section#contact ::-moz-placeholder {
   /* Firefox 19+ */
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
   color: #eeeeee;
 }
 section#contact :-ms-input-placeholder {
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
   color: #eeeeee;
@@ -708,19 +645,19 @@ section#contact .text-danger {
   color: #e74c3c;
 }
 footer {
+  background: #000;
+  color: #fff;
   padding: 25px 0;
   text-align: center;
 }
 footer span.copyright {
   line-height: 40px;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   text-transform: none;
 }
 footer ul.quicklinks {
   margin-bottom: 0;
   line-height: 40px;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   text-transform: none;
 }
